Add refinery message partial in application layout

--- a/core/app/views/layouts/application.html.erb
+++ b/core/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
         <%= render "/refinery/header" -%>
       </header>
       <section id="page">
+        <div id="flash_container">
+          <%= render '/refinery/message' %>
+        </div>
         <%= yield %>
       </section>
       <footer>
